--- a/public/css/main.css
+++ b/public/css/main.css
@@ -96,22 +96,22 @@ body {
   line-height: 16px;
   color: #323232;
 }
-.user__alex .chat-message.alex .chat-message__body,
-.user__jane .chat-message.jane .chat-message__body {
+.user__alex .chat-message.get .chat-message__body,
+.user__jane .chat-message.send .chat-message__body {
   flex-direction: row-reverse;
   justify-content: flex-end;
 }
-.user__alex .chat-message.alex .chat-message__info,
-.user__jane .chat-message.jane .chat-message__info {
+.user__alex .chat-message.get .chat-message__info,
+.user__jane .chat-message.send .chat-message__info {
   background: #C4BFFF;
   border-radius: 15px 15px 15px 0px;
 }
-.user__alex .chat-message.jane .chat-message__body,
-.user__jane .chat-message.alex .chat-message__body {
+.user__alex .chat-message.send .chat-message__body,
+.user__jane .chat-message.get .chat-message__body {
   justify-content: flex-end;
 }
-.user__alex .chat-message.jane .chat-message__info,
-.user__jane .chat-message.alex .chat-message__info {
+.user__alex .chat-message.send .chat-message__info,
+.user__jane .chat-message.get .chat-message__info {
   background: #D0DCFF;
   border-radius: 15px 15px 0px 15px;
 }
@@ -145,4 +145,75 @@ body {
   width: 24px;
   height: 24px;
   cursor: pointer;
+}
+/* === Modal === */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.2);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.modal.active {
+  display: flex;
+}
+.modal-content {
+  background: #F2F7FF;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+  border-radius: 28px;
+}
+.modal__inp {
+  padding: 8px 16px 0;
+  background: #E7E0EC;
+  border-radius: 4px 4px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #000000;
+}
+.modal__inp-label {
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.4px;
+  color: #000000;
+  margin-bottom: 5px;
+}
+.modal__inp input,
+.modal__inp textarea {
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+  color: #000000;
+  border: none;
+  outline: none;
+  background: none;
+  resize: none;
+}
+.modal-btns {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 24px;
+}
+.modal-btns button {
+  border: none;
+  outline: none;
+  background: none;
+  padding: 10px 12px;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0.1px;
+  cursor: pointer;
+}
+.modal-del {
+  color: #CF1B1B;
+}
+.modal-edit {
+  color: #6750A4;
 }
