--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,8 @@ body {
 .main {
   width: 100%;
   position: absolute;
+  /* top: 0; */
+  /* left: 0; */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -81,7 +83,7 @@ body {
 }
 .chat-message__body {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   gap: 5px;
 }
 .chat-message__info {
@@ -91,9 +93,13 @@ body {
   line-height: 19px;
   color: #000000;
 }
+.chat-message__info img {
+  width: 100%;
+}
 .chat-message__time {
   font-size: 14px;
   line-height: 16px;
+  margin: 0 3px 5px 0;
   color: #323232;
 }
 .chat-message.get .chat-message__body {
@@ -144,11 +150,12 @@ body {
 }
 /* === Modal === */
 .modal {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100vh;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background: rgba(0, 0, 0, 0.2);
   display: none;
   justify-content: center;
